GNOME Bugzilla – Bug 582215
Initialize a variable shell-app-monitor.c to fix an occasional crash
Last modified: 2009-05-12 17:47:11 UTC
Not sure that this is the correct fix...
Created attachment 134427 [details] [review] Initialize a variable to fix an occasional crash
Created attachment 134433 [details] [review] More complete patch, same idea Good catch! Funny, I don't remember seeing this one in my tests. Now I've checked it, it should have created very bad effects all the time, and was even destroying the future handling of activities by mixing them together... We need a little more than you fix, though: the list must be reset everytime a new activity is found in the file (which is never, for now, but I tested it anyway). And that bug was mixed with a typo (1 instead of -1) that could improve the weirdness of all that. The attached patch should be good, at least I tested it and it fixed the testcase I could think of.
looks plausible i guess...
Pushed as bea595d14391259bbabbac9285d612c19bed3a34